--- a/templates/new_base.html
+++ b/templates/new_base.html
@@ -54,12 +54,13 @@
                         <a href="/">Home</a>
                     </li>
                     <li>{% if "current_user" in session %}
-                        <a href="/profile/{{ session.user_id }}">My Account</a>
+                        <a href="/profile/{{ session.current_user }}">My Account</a>
                     </li>
                     <li>
-                        <a href="/logout">
-                            <form action="/logout" method="POST">Logout</form>
-                        </a>
+                        <form action="/logout" method="POST">
+                            <input type="submit" value="Logout">
+                        </form>
+                        
                     </li>
                     <li>{% else %}
                         <a href="/login">Login</a>
