--- a/static/css/base.css
+++ b/static/css/base.css
@@ -29,6 +29,7 @@ p {
     font-size: 1.25em;
     line-height: 1.6;
     color: #000;
+    font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
 hr {
