--- a/templates/my_favorite.html
+++ b/templates/my_favorite.html
@@ -11,8 +11,7 @@
                     <strong>Restaurants Marked as Favorites</strong>
                 </h2>
                 <hr>
-                
-                {% for restaurant in restaurants %}
+                {% for restaurant in restaurants | sort(attribute="name") %}
                 <div class="col-md-4">
                     <form action="/remove_favor/{{ restaurant.restaurant_id }}" method="POST">
                           <a href="/search_restaurant/{{ restaurant.restaurant_id }}">
