--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,7 +11,7 @@
                 <hr>
                 <div class="col-lg-6">
                     <p><a href="/list_favlist/{{ user.user_id }}">My Favorites</a></p>
-                    <p>Last Login: {{ last_login }}</p>
+                    <p>Last Login: {{ user.last_login }}</p>
                     <p>Name: <b>{{ user.fname }} {{ user.lname }}</b></p>
                     <p>Username: <b>{{ user.username }}</b></p>
                     <p>Favorite Cuisine: <a href="/lookup_cuisine">{{ user.fav_cuisine }}</a></p>
@@ -33,18 +33,21 @@
                     <strong>Recent Ratings</strong>
                 </h2>
                 <hr>
-                {% for r in user.ratings %}
-                    <div class="col-lg-4">
-                        <p>Restaurant: <b>{{ r.restaurant.name }}</b></p>
-                        <p>Cleanliness: {{ r.cleanliness }}</p>
-                        <p>Quality: {{ r.quality }}</p>
-                        <p>Atmosphere: {{ r.atmosphere }}</p>
-                        <p>Consistency: {{ r.consistency }}</p>
+                    {% for r in user.ratings %}
+                    <div class="col-lg-6" style="height: 200px;">
+                        <hr>
+                        <div class="col-lg-4">
+                            <h6>Restaurant: {{ r.restaurant.name }}</h6>
+                            <h6>Cleanliness: {{ r.cleanliness }}</h6>
+                            <h6>Quality: {{ r.quality }}</h6>
+                            <h6>Atmosphere: {{ r.atmosphere }}</h6>
+                            <h6>Consistency: {{ r.consistency }}</h6>
+                        </div>
+                        <div class="col-lg-2">
+                            <img src={{ r.restaurant.image }} style="display: inline-block;" height="125px" width="178px">
+                        </div>
                     </div>
-                    <div class="col-lg-4">
-                        <img src={{ r.restaurant.image }} style="display: inline-block;" height="225px" width="285px">
-                    </div>
-                {% endfor %} 
+                    {% endfor %} 
             </div>
         </div>
     </div>
