--- a/templates/restaurant_list.html
+++ b/templates/restaurant_list.html
@@ -1,24 +1,27 @@
 {% extends "new_base.html" %}
 {% block content %}
 <div class="container">
-    <div class="row">
-        <div class="box">
-          <h3>List of {{ cuisine }} Restaurants!</h3>
-          <hr>
-          <div class="row">
-            <div class="col-md-12">
-              {% for restaurant in results %}
-              <div class="col-md-4">
-                <form action="/remove_favor/{{ restaurant.restaurant_id }}" method="POST">
-                  <a href="/search_restaurant/{{ restaurant.restaurant_id }}">
-                    <img src={{ restaurant.image }} class="img-rounded" width="250px" height="180px"><br>{{ restaurant.name }}
-                  </a>
-                </form>
-                <br>
-              </div>
-              {% endfor %}
+    <div class="container">
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                  <hr>
+                  <h2 class="intro-text text-center">
+                      <strong>List of {{ cuisine }} Restaurants!</strong>
+                  </h2>
+                  <hr>
+                  {% for restaurant in results | sort(attribute="name") %}
+                  <div class="col-md-4">
+                    <form action="/remove_favor/{{ restaurant.restaurant_id }}" method="POST">
+                      <a href="/search_restaurant/{{ restaurant.restaurant_id }}">
+                        <img src={{ restaurant.image }} class="img-rounded" width="250px" height="180px"><br>{{ restaurant.name }}
+                      </a>
+                    </form>
+                    <br>
+                  </div>
+                  {% endfor %}
+                </div>
             </div>
-          </div>
         </div>
     </div>
 </div>
