--- a/templates/login.html
+++ b/templates/login.html
@@ -9,20 +9,21 @@
         </h2>
         <hr>
           <form action="/login" method="POST">
-            <label>Username:
+            <h3>Username:
               <input type="username" name="username" required>
-            </label>
-            <label>Password:
+            </h3>
+            <h3>Password:
               <input type="password" name="password" required>
-            </label>
-            <input type="submit" value="Log in">
+            </h3>
+            <input type="submit" class="btn btn-success" value="Log in">
           </form>
+          <hr>
           <form action="/register" method="GET">
-            Not a user yet? <a href="/register"><b>Register Now!</b></a>
+            Not a user yet? <a href="/register"><strong>Register Now!</strong></a>
           </form>
-        </div>
+          <hr>
+          <img src="/static/img/loginzen.jpg">
       </div>
-
   </div>
 </div>
 
