--- a/templates/register.html
+++ b/templates/register.html
@@ -27,7 +27,7 @@
                       <option value="Middle Eastern">Middle Eastern</option>
                       <option value="Indian">Indian</option>
                     </select></p>
-                    <input type="submit" value="Register!">
+                    <input type="submit" class="btn btn-success" value="Register!">
                   </form>
                 </div>
             </div>
