--- a/templates/new_base.html
+++ b/templates/new_base.html
@@ -13,7 +13,7 @@
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="/static/css/base.css" rel="stylesheet">
@@ -57,23 +57,21 @@
                         <a href="/profile/{{ session.current_user }}">My Account</a>
                     </li>
                     <li>
-                        <form action="/logout" method="POST">
-                            <input type="submit" value="Logout">
-                        </form>
-                        
+                        <a href="/logout">Logout</a>
                     </li>
                     <li>{% else %}
                         <a href="/login">Login</a>
                     </li>{% endif %}
-                    <li><form action="/search" method="POST">
-                        <input type="text" name="search-form" class="form-control" placeholder="Search">
+                    <li><br>
+                        <form action="/search" method="POST" class="form-inline">
+                            <input type="text" name="search-form" class="form-control" placeholder="Search">
+                            <button type="submit" class="btn btn-primary">Search for Restaurants or Users</button>
+                        </form>
                     </li>
-                    <li>
-                        <button type="submit" class="btn btn-default">Search for Restaurants or Users</button>
-                    </li></form>
+                   
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
+        <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
 
@@ -103,7 +101,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                   <p></p>
+                   <p>@Hackbright Academy</p>
                 </div>
             </div>
         </div>
