--- a/templates/new_base.html
+++ b/templates/new_base.html
@@ -68,7 +68,7 @@
                             <button type="submit" class="btn btn-primary">Search for Restaurants or Users</button>
                         </form>
                     </li>
-                   
+
                 </ul>
             </div>
         <!-- /.navbar-collapse -->
@@ -89,12 +89,12 @@
         {% endwith %}
 
     </nav>
-    
-        
-{% block content %}    
+
+
+{% block content %}
 {% endblock %}
 
-  
+
     <!-- /.container -->
 
     <footer>
@@ -107,7 +107,7 @@
         </div>
     </footer>
 
-   
+
 
 
     <!-- Javascript -->
@@ -120,12 +120,26 @@
     <script type="text/javascript" src="/static/js/addRestaurant.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
-    <!-- Script to Activate the Carousel -->
-    <script>
-    $('.carousel').carousel({
-        interval: 5000 //changes the speed
-    })
-    </script>
+<!-- Script to Activate the Carousel -->
+<script>
+$('.carousel').carousel({
+    interval: 5000 //changes the speed
+})
+</script>
+<!-- analytics -->
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-90693814-1', 'auto');
+ga('require', 'pageVisibilityTracker');
+ga('require', 'eventTracker');
+ga('require', 'urlChangeTracker');
+ga('send', 'pageview');
+
+</script>
 </body>
 
 </html>
