--- a/templates/new_base.html
+++ b/templates/new_base.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <link rel="shortcut icon" href="static/img/favicon.jpeg" type="image/x-icon">
+    <meta name="description" content="Please your taste buds.">
 
     <title>San Franasia - Feed Your Craving</title>
 
